<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Movie Rentals</string>
    <string name="tile_start_order">Order</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_entree_menu">Entrees</string>
    <string name="title_side_menu">Sides</string>
    <string name="title_accompaniment_menu">Accompaniments</string>
    <string name="title_checkout">Checkout</string>
    <string name="start_order">Start Order</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="tax">Tax: %s</string>
    <string name="total">Total: %s</string>
    <string name="next">Next</string>
    <string name="order_summary">Order Summary</string>
    <string name="submit">Submit Order</string>
    <string name="submit_order">Order Submitted!</string>
    <string name="ghostbusters">ghostbusters</string>
    <string name="toystory">toystory</string>
    <string name="morbius">morbius</string>
    <string name="uncutgems">uncutgems</string>
    <string name="topgun">topgun</string>
    <string name="bullettrain">bullettrain</string>
    <string name="order_here">order here!</string>
</resources>
