<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.order.EntreeMenuFragment">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

        <!-- doneTODO: Add the data binding variable for the EntreeMenuFragment -->
        <variable
            name="EntreeMenuFragment"
            type="com.example.lunchtray.ui.order.EntreeMenuFragment" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/side_margin"
            android:paddingEnd="@dimen/side_margin"
            android:paddingBottom="@dimen/side_margin">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="106dp"
                android:layout_height="104dp"
                android:contentDescription="@string/ghostbusters"
                android:src="@drawable/ghostbusters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="106dp"
                android:layout_height="104dp"
                android:contentDescription="@string/toystory"
                android:src="@drawable/toystory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="106dp"
                android:layout_height="104dp"
                android:contentDescription="@string/morbius"
                android:src="@drawable/morbius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="106dp"
                android:layout_height="104dp"
                android:contentDescription="@string/uncutgems"
                android:src="@drawable/uncutgems"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="106dp"
                android:layout_height="104dp"
                android:contentDescription="@string/topgun"
                android:src="@drawable/topgun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="106dp"
                android:layout_height="104dp"
                android:contentDescription="@string/bullettrain"
                android:src="@drawable/bullettrain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <RadioGroup
                android:id="@+id/entree_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- doneTODO: set the entree in the view model when the RadioButton is clicked -->

                <CheckBox
                    android:id="@+id/cauliflower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{() -> viewModel.setEntree("topgun")}'
                    android:text='@{viewModel.menuItems["topgun"].name}'
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/cauliflower_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["topgun"].description}'
                    tools:text="Entree 1 description" />

                <TextView
                    android:id="@+id/cauliflower_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["topgun"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cauliflower_description" />

                <!-- doneTODO: set the entree in the view model when the RadioButton is clicked -->
                <CheckBox
                    android:id="@+id/chili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{() -> viewModel.setEntree("bullettrain")}'
                    android:text='@{viewModel.menuItems["bullettrain"].name}'
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/chili_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["bullettrain"].description}'
                    tools:text="Entree 2 description" />

                <TextView
                    android:id="@+id/chili_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["bullettrain"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chili_description" />

                <!-- doneTODO: set the entree in the view model when the RadioButton is clicked -->
                <CheckBox
                    android:id="@+id/pasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{() -> viewModel.setEntree("uncutgems")}'
                    android:text='@{viewModel.menuItems["uncutgems"].name}'
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/pasta_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["uncutgems"].description}'
                    tools:text="Entree 3 description" />

                <TextView
                    android:id="@+id/pasta_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["uncutgems"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />

                <!-- doneTODO: set the entree in the view model when the RadioButton is clicked -->
                <CheckBox
                    android:id="@+id/skillet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{() -> viewModel.setEntree("morbius")}'
                    android:text='@{viewModel.menuItems["morbius"].name}'
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/skillet_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["morbius"].description}'
                    tools:text="Entree 4 description" />

                <TextView
                    android:id="@+id/skillet_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["morbius"].getFormattedPrice()}'
                    tools:text="$0.00" />


                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />

                <!-- doneTODO: set the entree in the view model when the RadioButton is clicked -->
                <CheckBox
                    android:id="@+id/toystory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{() -> viewModel.setEntree("toystory")}'
                    android:text='@{viewModel.menuItems["toystory"].name}'
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/toystory_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["toystory"].description}'
                    tools:text="Entree 5 description" />

                <TextView
                    android:id="@+id/toystory_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["toystory"].getFormattedPrice()}'
                    tools:text="$0.00" />


                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />

                <!-- doneTODO: set the entree in the view model when the RadioButton is clicked -->
                <CheckBox
                    android:id="@+id/ghostbusters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{() -> viewModel.setEntree("ghostbusters")}'
                    android:text='@{viewModel.menuItems["ghostbusters"].name}'
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/ghostbusters_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["ghostbusters"].description}'
                    tools:text="Entree 6 description" />

                <TextView
                    android:id="@+id/ghostbusters_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["ghostbusters"].getFormattedPrice()}'
                    tools:text="$0.00" />

            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.LunchTray.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/base_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entree_options" />

            <!-- doneTODO: set the text to the current subtotal value from the view model -->
            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="@{@string/subtotal(viewModel.subtotal)}"/>

            <!-- doneTODO: cancel the order when clicked -->
            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Order.Button.Cancel"
                android:onClick="@{() -> EntreeMenuFragment.cancelOrder()}"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <!-- doneTODO: go to the next screen when clicked -->
            <Button
                android:id="@+id/next_button"
                style="@style/Widget.Order.Button.Next"
                android:onClick="@{() -> EntreeMenuFragment.goToNextScreen()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
